# Data.Triplets.Kernel

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Platform.Data.Triplets.Kernel.sln  README.md  publish-binaries.sh
.github/workflows/: CD.yml
NuGetPackageSource/: Platform.Data.Triplets.Kernel.0.0.3.nuspec  Platform.Data.Triplets.Kernel.0.0.4.nuspec
Platform.Data.Triplets.Kernel/: Common.c  Common.h  Link.c  Link.h  LinkLowLevel.h  Makefile  PersistentMemoryManager.c  PersistentMemoryManager.h  Platform.Data.Triplets.Kernel  SizeBalancedTree.h  Timestamp.c  hello.c  run.bat  test  test.c
Platform.Data.Triplets.Kernel.Tests/: LinkTests.cpp  PersistentMemoryManagerTests.cpp  Platform.Data.Triplets.Kernel.Tests.vcxproj
osx-x64/native/: libPlatform.Data.Triplets.Kernel.dylib  libPlatform_Data_Triplets_Kernel.dylib
